?????? ??????? ?????? ? ??????? ??? MacOS X 10.7. ?????????? make ????? ? ??????????? ??????? ?? ??????? ?????????. ??? ?????? ??????? ??? MacOS ??????????? ???????? ?? ????????????? ????? ????? ? ???????? ?????????? ???????. ?????? ???????????, ?? ????????? ????????? ??? ????????????????? ?? ???????, ?.?. ? mental-asr ??????????? ??? - ?? ?????????? ????? ???????.

--- a/triggers/log_v1/Makefile
+++ b/triggers/log_v1/Makefile
@@ -2,38 +2,54 @@ CCP=g++
 CCC=gcc
 CFLAGS=-Wall -c -g -fPIC
 
-CF_AUX_FLAGS= `pkg-config --cflags libxml-2.0` \
-          `pkg-config --cflags fann` \
-          `pkg-config --cflags libpcre`
+OS=$(shell uname -s)
+ifeq ($(OS),Darwin)
+	CF_AUX_FLAGS= `pkg-config --cflags libxml-2.0` \
+          -I ../../xml_support/ \
+          -I ../../aux-packages/tcl8.5.9/generic/ \
+          -DMACOSX
+    LIB_EXT=dylib
+    install_targets=install.macos
+else
+    CF_AUX_FLAGS= `pkg-config --cflags libxml-2.0` \
+          -I ../../xml_support/ \
+          -DGNULINUX
+    LIB_EXT=so
+    install_targets=install.gnulinux
+endif
           
-CF_FSM_FLAGS=-I ../../ -I ../../xml_support/
+CF_FSM_FLAGS=-I ../../ 
 
 LDFLAGS= -shared \
          -lpthread \
          -ltcl8.5 \
          `pkg-config --libs libxml-2.0` \
-         `pkg-config --libs fann` \
-         `pkg-config --libs libpcre` \
          -lxmlsup -L ../../xml_support/obj/ \
 
-#SRCS=   log_trigger.cpp	 base_trigger.cpp
 SRCS=$(wildcard *.cpp)
 OBJS:=$(SRCS:%.cpp=./obj/%.o)
 
-PROG=liblog_trigger_v1.so
+PROG=liblog_trigger_v1.$(LIB_EXT)
 BUILD_DIR=./obj
 
-all:$(BUILD_DIR)/$(PROG)
+all:$(BUILD_DIR)/$(PROG) $(install_targets)
 
 $(BUILD_DIR)/$(PROG): dirs $(OBJS)
 	@echo [LD] $(PROG); \
 	$(CCP) $(OBJS) $(LDFLAGS) -o $(BUILD_DIR)/$(PROG)
-	@cp $(BUILD_DIR)/$(PROG) ../../../bin/libs/
+	
 
 $(BUILD_DIR)/%.o: %.cpp
 	@echo [CC] $< ; \
 	$(CCP) $(CFLAGS) $(CF_AUX_FLAGS) $(CF_FSM_FLAGS) -MD -o $@ -c $< ;
+
+install.gnulinux: FORCE
+	@cp $(BUILD_DIR)/$(PROG) ../../../bin/libs/
 	
+install.macos: FORCE
+	@install_name_tool -change ./obj/libxmlsup.dylib  @executable_path/libs/libxmlsup.dylib $(BUILD_DIR)/$(PROG)
+	@cp $(BUILD_DIR)/$(PROG) ../../../bin/libs/
+
 dirs: FORCE
 	-@if [ ! -d $(BUILD_DIR) ]; then mkdir $(BUILD_DIR); fi
 
