--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -1,7 +1,12 @@
-#Tue Jun 14 22:39:54 ?????????? ?????? ????? 2011
-environment/project/cdt.managedbuild.toolchain.gnu.base.1795735002/PATH/delimiter=\:
-environment/project/cdt.managedbuild.toolchain.gnu.base.1795735002/append=true
+#Tue May 01 20:24:58 MSD 2012
 eclipse.preferences.version=1
-environment/project/cdt.managedbuild.toolchain.gnu.base.1795735002/appendContributed=true
+environment/project/cdt.managedbuild.toolchain.gnu.base.1795735002/PATH/delimiter=\:
 environment/project/cdt.managedbuild.toolchain.gnu.base.1795735002/PATH/operation=append
 environment/project/cdt.managedbuild.toolchain.gnu.base.1795735002/PATH/value=/usr/local/bin\:/usr/bin\:/bin
+environment/project/cdt.managedbuild.toolchain.gnu.base.1795735002/append=true
+environment/project/cdt.managedbuild.toolchain.gnu.base.1795735002/appendContributed=true
+environment/project/cdt.managedbuild.toolchain.gnu.macosx.base.1936965919/PATH/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.macosx.base.1936965919/PATH/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.macosx.base.1936965919/PATH/value=${PATH}\:/usr/local/bin/
+environment/project/cdt.managedbuild.toolchain.gnu.macosx.base.1936965919/append=true
+environment/project/cdt.managedbuild.toolchain.gnu.macosx.base.1936965919/appendContributed=true
