--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -1,5 +1,10 @@
-#Tue May 01 20:24:58 MSD 2012
+#Tue May 08 21:55:18 MSD 2012
 eclipse.preferences.version=1
+environment/project/cdt.managedbuild.toolchain.gnu.base.1237948282/PATH/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.1237948282/PATH/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.base.1237948282/PATH/value=${PATH}\:/usr/local/bin/
+environment/project/cdt.managedbuild.toolchain.gnu.base.1237948282/append=true
+environment/project/cdt.managedbuild.toolchain.gnu.base.1237948282/appendContributed=true
 environment/project/cdt.managedbuild.toolchain.gnu.base.1795735002/PATH/delimiter=\:
 environment/project/cdt.managedbuild.toolchain.gnu.base.1795735002/PATH/operation=append
 environment/project/cdt.managedbuild.toolchain.gnu.base.1795735002/PATH/value=/usr/local/bin\:/usr/bin\:/bin
