--- a/triggers/pcre_v1/Makefile
+++ b/triggers/pcre_v1/Makefile
@@ -7,28 +7,50 @@ ifeq ($(OS),Darwin)
 	CF_AUX_FLAGS= `pkg-config --cflags libxml-2.0` \
           -I ../../../../aux-packages/pcre-8.12/ \
           -I ../../xml_support/ \
-          -I ../../aux-packages/tcl8.5.9/generic/ \
+          -I ../../../../aux-packages/tcl8.5.9/generic/ \
           -I ../../../../aux-packages/build/include/ \
           -DMACOSX
     LIB_EXT=dylib
     install_targets=install.macos
-else
-    CF_AUX_FLAGS= `pkg-config --cflags libxml-2.0` \
-          `pkg-config --cflags libpcre` \
-          -I ../../xml_support/ \
-          -DGNULINUX
-    LIB_EXT=so
-    install_targets=install.gnulinux
-endif          
-          
-CF_FSM_FLAGS=-I ../../
-
-LDFLAGS= -shared \
+    
+    LDFLAGS= -shared \
          -lpthread \
          -ltcl8.5 \
          `pkg-config --libs libxml-2.0` \
          `pkg-config --libs libpcre` \
          -lxmlsup -L ../../xml_support/obj/
+else
+ifeq ($(AUXBUILD),AUX)
+	CF_AUX_FLAGS= `pkg-config --cflags libxml-2.0` \
+          -I ../../xml_support/ \
+          -I ../../../../aux-packages/tcl8.5.9/generic/ \
+          -I ../../../../aux-packages/build/include/ \
+          -DMACOSX
+          
+	LDFLAGS= -shared \
+         -lpthread \
+         -ltcl8.5 \
+         `pkg-config --libs libxml-2.0` \
+         `pkg-config --libs libpcre` \
+         -lxmlsup -L ../../xml_support/obj/
+else
+    CF_AUX_FLAGS= `pkg-config --cflags libxml-2.0` \
+          `pkg-config --cflags libpcre` \
+          -I ../../xml_support/ \
+          -DGNULINUX
+          
+    LDFLAGS= -shared \
+         -lpthread \
+         -ltcl8.5 \
+         `pkg-config --libs libxml-2.0` \
+         `pkg-config --libs libpcre` \
+         -lxmlsup -L ../../xml_support/obj/
+endif
+	LIB_EXT=so
+    install_targets=install.gnulinux
+endif          
+          
+CF_FSM_FLAGS=-I ../../
 
 SRCS=$(wildcard *.cpp)
 OBJS:=$(SRCS:%.cpp=./obj/%.o)
