--- a/triggers/log_v1/Makefile
+++ b/triggers/log_v1/Makefile
@@ -8,7 +8,7 @@ ifeq ($(OS),Darwin)
           -I ../../xml_support/ \
           -I ../../aux-packages/tcl8.5.9/generic/ \
           -I ../../../../aux-packages/build/include/ \
-          -DMACOSX
+          -DMACOSX -DAUXPACKAGES
     LIB_EXT=dylib
     install_targets=install.macos
     
@@ -23,7 +23,7 @@ ifeq ($(AUXBUILD),AUX)
           -I ../../xml_support/ \
           -I ../../../../aux-packages/tcl8.5.9/generic/ \
           -I ../../../../aux-packages/build/include/ \
-          -DMACOSX
+          -DGNULINUX -DAUXPACKAGES
     install_targets=install.gnulinux
     
     LDFLAGS= -shared \
