????????? ??????? merge, ?????? fann-train ??????? ?? ?????????????? ?????????

--- a/fann_train/Makefile
+++ b/fann_train/Makefile
@@ -1,12 +1,12 @@
 CCP=g++
 CCC=gcc
-PROTOC=/Users/drozdov/dev/speech/asr-fsm/mental-fsm/fann_train/../../../aux-packages/build/bin/protoc
+PROTOC=/home/adrozdov/dev/speech/aux-packages/build/bin/protoc
 
 PROG=fann_train.bin
 BUILD_DIR=./obj
 
-CFLAGS=-Wall -O0 -g3  -I /Users/drozdov/dev/speech/asr-fsm/mental-fsm/fann_train/../../../aux-packages/build/include/ -c 
-LDFLAGS=-lpthread -ldl  -lprotobuf -L/Users/drozdov/dev/speech/asr-fsm/mental-fsm/fann_train/../../../aux-packages/build/lib/ -lpcre -lfloatfann -ltcl
+CFLAGS=-Wall -O0 -g3  -I /home/adrozdov/dev/speech/aux-packages/build/include/ -c 
+LDFLAGS=-lpthread -ldl  -lprotobuf -L/home/adrozdov/dev/speech/aux-packages/build/lib/ -lpcre -lfloatfann -ltcl8.5
 
 SRCS=$(wildcard *.cpp)
 OBJS:=$(SRCS:%.cpp=$(BUILD_DIR)/%.o)
@@ -15,7 +15,7 @@ PROTO=$(wildcard *.proto)
 PROTO_CC=$(PROTO:%.proto=%.pb.cc)
 PROTO_OBJ=$(PROTO_CC:%.cc=./obj/%.o)
 
-all:$(BUILD_DIR)/$(PROG) install.macos
+all:$(BUILD_DIR)/$(PROG) install.gnulinux
 
 $(BUILD_DIR)/$(PROG): dirs $(PROTO_CC) $(PROTO_OBJ) $(OBJS)
 	@echo [LD] $(PROG); \
