--- a/.hgignore
+++ b/.hgignore
@@ -10,8 +10,13 @@
 \.in~$
 \.so$
 \.dylib$
+\.o$
+\.d$
+\.pb\.h$
+\.pb\.cc$
 p2vera/bin/
 \.settings/
 p2vera/source/Makefile
 p2vera/source/config.h
 p2vera/source/tests/Makefile
+fann_train/Makefile
