--- a/p2vera/source/tests/configure.in
+++ b/p2vera/source/tests/configure.in
@@ -61,12 +61,13 @@ else
 	fi
 	LIBS="$LIBS -lprotobuf"
 	protoc="protoc"
+	includes=$INCLUDES
 fi
 
 build_dir="./obj"
 CFLAGS="-Wall -O0 -g3"
 LIBS="$LIBS -L ../obj/ -l p2vera"
-includes="$INCLUDES -I ../"
+includes="$includes -I ../"
 
 AC_SUBST(install_targets)
 AC_SUBST(includes)
